# waif-arrays

./: waif-arrays.cabal
